[package]
name = "enchantress"
version = "0.1.5"
edition = "2024"
authors = ["Keegan Bowen <carefuldata@protonmail.com>"]
license = "MIT"
description = "AES-256 file encryption tool"
homepage = "https://carefuldata.com"
repository = "https://github.com/jpegleg/enchantress"
readme = "README.md"
categories = ["cryptography"]
keywords = ["aes-256", "file-encryption", "cli", "encryption", "password"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
rpassword = "7.4.0"
aes = "0.8.1"
ctr = "0.9.2"
rand = "0.9.1"
sha3 = "0.10.1"
argon2 = "0.5.1"
toml = "0.9.2"
serde = { version = "1.0.29", features = ["derive"] }
base64 = "0.22.1"
chrono = "0.4.41"
zeroize = "1.8.1"
