[package]
name = "enchantress"
version = "0.1.12"
edition = "2024"
authors = ["Keegan Bowen <carefuldata@protonmail.com>"]
license = "MIT"
description = "AES-256 file encryption tool"
homepage = "https://carefuldata.com"
repository = "https://github.com/jpegleg/enchantress"
readme = "README.md"
categories = ["cryptography"]
keywords = ["aes-256", "file-encryption", "cli", "encryption", "password"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
rpassword = "7.5.4"
aes = "0.8.4"
ctr = "0.9.2"
rand = "0.9.4"
sha3 = "0.10.9"
argon2 = "0.5.3"
toml = "0.9.12"
serde = { version = "1.0.228", features = ["derive"] }
base64 = "0.22.1"
chrono = "0.4.45"
zeroize = "1.9.0"
aes-gcm = "0.10.3"
